Fix content overflow in blog posts and include posts hyperlink color logic in _single.scss

--- a/assets/css/comments.css
+++ b/assets/css/comments.css
@@ -6,11 +6,12 @@
 .post-comment {
     display: flex;
     flex-direction: column;
-    margin: 0 1rem;
+    max-width: 75vw;
     padding: 1.5rem;
     border-color: grey;
     border-style: solid;
     border-width: .15rem;
+    margin: 0 auto;
 }
 
 .post-comment-reply {
